# bevy_rectray

./: Cargo.toml  README.md
examples/: 3d_layout.rs  anchors.rs  deletion.rs  layout.rs  picking_3d.rs  text.rs  text_picking.rs  tooltip.rs
picking/: Cargo.toml  README.md
picking/examples/: picking_3d.rs  text_picking.rs
picking/src/: lib.rs
showcase/: rectray.afdesign
src/: hierarchy.rs  lib.rs  picking.rs  pipeline.rs  rect.rs  sync_sprite.rs  tooltip.rs  transform.rs  window.rs
src/layout/: container.rs  doc.md  layouts.rs  mod.rs  span.rs  util.rs
