[package]
name = "bevy_rectray"
version = "0.2.0"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/bevy_rectray"
description = """
A minimal 2d layout system for bevy.
"""
keywords = ["bevy", "layout", "ui"]

[dependencies]
bevy = { version = "0.15.0", default-features = false, features = ["bevy_picking", "bevy_render"]}
downcast-rs = "1.2.1"
serde = { version = "1.0.204", features = ["derive"] }

[dev-dependencies]
bevy = "0.15.0"
fastrand = "2.1.0"
itertools = "0.13.0"
