[package]
name = "bevy_rectray_picking"
version = "0.1.0"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/bevy_rectray"
description = """
bevy_mod_picking backend for bevy_rectray.
"""
keywords = ["bevy", "layout", "ui"]

[dependencies]
bevy_mod_picking = { version = "0.20.1", default-features = false }
bevy_ecs = "0.14.0"
bevy_transform = "0.14.0"
bevy_math = "0.14.0"
bevy_hierarchy = "0.14.0"
bevy_render = "0.14.0"
bevy_app = "0.14.0"
bevy_rectray = { version = "0.1.0", path = "../"}

[dev-dependencies]
bevy_mod_picking = "0.20.1"
bevy = "0.14.0"
itertools = "0.13.0"
fastrand = "2.1.0"